<resources>
    <string name="app_name">SpyAudioRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="instruction">Instructions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="toggle_flash">Toggle Flash</string>

    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Spy Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Last Record</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>

</resources>