<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBar.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AppBar.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/audio_recorder"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/idRecstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txthead"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idRecstatus"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnRecord"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/start_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_start_recording" />

            <TextView
                android:id="@+id/btnStop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/stop_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_stop_recording" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView1"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/play_recording"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_play_audio" />

            <TextView
                android:id="@+id/btnStopPlay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/stop_playing"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/ic_pause_audio" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView2"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="stop service"
        android:id="@+id/btnStopService"
        android:layout_below="@id/cardView2" />

    <Button
        android:id="@+id/showListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/btnStopService"
        android:text="Record List" />
     </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ListView
        android:id="@+id/fileListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView3" />

</RelativeLayout>
